--- a/docs/_includes/footer.html
+++ b/docs/_includes/footer.html
@@ -2,9 +2,7 @@
   <div class="container">
     <div class="footer left column one-half">
       <section class="small-font">
-        Theme <a href="https://github.com/wild-flame/jekyll-simple"> Simple </a> by <a href="http://wildflame.me">wildflame</a>
-        © 2016 
-        Powered by <a href="https://github.com/jekyll/jekyll">jekyll</a>
+      <a href="https://taodrive.com" target="_blank">TAOドライブ株式会社</a>
       </section>
     </div>
 
