--- a/docs/_layouts/default.html
+++ b/docs/_layouts/default.html
@@ -1,6 +1,7 @@
 <!DOCTYPE html>
 <html>
   {% include head.html %}
+  {% include ga.html %}
   <body>
     <div class="page-content">
       <div class="container">
